Fix tec on mobile

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -62,7 +62,7 @@
         justify-content: center;
     }
     .tecnologias{
-        font-size: 50pt;
+        font-size: 45pt;
     }
 
     /* CONTATO */
